update example application (RELEASE 2021.1)